Refactored mainClass and added server. Also, refactored Socket listener to use events interfaces.

--- a/server/server.csproj
+++ b/server/server.csproj
@@ -35,6 +35,7 @@
     <Compile Include="SocketListener.cs" />
     <Compile Include="ClientHandler.cs" />
     <Compile Include="SocketReclaimer.cs" />
+    <Compile Include="Server.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
